--- a/src/Weather.css
+++ b/src/Weather.css
@@ -1,7 +1,7 @@
 .Weather {
-  border: 1px solid #dadce0;
-  border-radius: 4px;
+  border-radius: 10px;
   padding: 20px;
+  background-color: rgba(255, 255, 255, 0.2);
 }
 .Weather ul {
   list-style: none;
