--- a/src/App.css
+++ b/src/App.css
@@ -1,15 +1,11 @@
 body {
-  font-family: Google Sans, arial, sans-serif;
-  max-width: 600px;
-  margin: 100px auto 0px;
-  background: linear-gradient(
-    to top,
-    lightgrey 0%,
-    lightgrey 1%,
-    #e0e0e0 26%,
-    #efefef 48%,
-    #d9d9d9 75%,
-    #bcbcbc 100%
+  font-family: "Paytone One", sans-serif;
+  max-width: 700px;
+  margin: 100px auto 40px;
+  background: radial-gradient(
+    circle at 10% 20%,
+    rgba(216, 241, 230, 0.46) 0.1%,
+    rgba(233, 226, 226, 0.28) 90.1%
   );
   background-size: cover;
 }
@@ -21,11 +17,17 @@ body {
 .App footer {
   font-size: 14px;
   color: #70757a;
-  margin-top: 100px;
+  margin-top: -60px;
+}
+.App footer a {
+  color: #70757a;
+}
+.App footer a:active {
+  color: #f2ed5d;
 }
 .logo {
-  max-width: 380px;
+  max-width: 545px;
   position: relative;
-  top: -40px;
-  left: -210px;
+  top: -126px;
+  left: -323px;
 }
