--- a/src/Weather.css
+++ b/src/Weather.css
@@ -1,13 +1,26 @@
 .Weather {
   border-radius: 10px;
-  padding: 20px;
-  background-color: rgba(255, 255, 255, 0.2);
+  box-shadow: 5px 5px 10px rgba(155, 155, 155, 0.1);
+  padding: 30px;
+  background-color: rgba(255, 255, 255);
 }
 .Weather ul {
   list-style: none;
 }
 .Weather canvas {
   padding-right: 10px;
+}
+.Weather .btn {
+  background: #fff963;
+  color: #202124;
+  border: none;
+  color: #202124;
+  font-size: 18px;
+  font-weight: 400;
+}
+.Weather .btn:hover {
+  background: #f2ed5d;
+  border: none;
 }
 .Weather .placeInfo {
   color: #70757a;
