--- a/src/WeatherForecast.css
+++ b/src/WeatherForecast.css
@@ -1,5 +1,6 @@
 .WeatherForecast {
   text-align: center;
+  margin-top: 20px;
 }
 .WeatherForecast .WeatherForecast-day-min-temperature {
   opacity: 0.6;
