--- a/src/App.css
+++ b/src/App.css
@@ -17,7 +17,8 @@ body {
 .App footer {
   font-size: 14px;
   color: #70757a;
-  margin-top: -60px;
+  margin-top: -75px;
+  text-align: center;
 }
 .App footer a {
   color: #70757a;
